PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.3.0alpha1

- CLI:
  . Added pdeathsig to builtin server to terminate workers when the master
    process is killed. (ilutov)

- Core:
  . Fixed bug GH-9388 (Improve unset property and __get type incompatibility
    error message). (ilutov)
  . SA_ONSTACK is now set for signal handlers to be friendlier to other
    in-process code such as Go's cgo. (Kévin Dunglas)

- Fileinfo:
  . Upgrade bundled libmagic to 5.43. (Anatol)

- JSON:
  . Implemented RFC: json_validate()
    https://wiki.php.net/rfc/json_validate (Juan Morales)

- Opcache:
  . Added start, restart and force restart time to opcache's
    phpinfo section. (Mikhail Galanin)
  . Fix GH-9139: Allow FFI in opcache.preload when opcache.preload_user=root.
    (Arnaud, Kapitan Oczywisty)
  . Made opcache.preload_user always optional in the cli and phpdbg SAPIs.
    (Arnaud)

- Posix:
  . Added posix_sysconf. (David Carlier)

- Sockets:
  . Added SO_ATTACH_REUSEPORT_CBPF socket option, to give tighter control
    over socket binding for a cpu core. (David Carlier)

- Reflection:
  . Fix GH-9470 (ReflectionMethod constructor should not find private parent
    method). (ilutov)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>